// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoItem /> Should render and match the snapshot 1`] = `
<div
  class="Wrapper-ziinx6-0 ecjWnr"
  id="todo-1"
>
  <div
    class="TodoTitle-xxpseh-0 cHcgZX"
    data-testid="todo-1"
    role="button"
    type="button"
  >
    One item
  </div>
  <div
    class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
  >
    <div
      alt="check"
      class="Checkbox-eu7a0t-0 hjQtxn"
      data-testid="toggle-1"
      role="button"
      type="button"
    />
    <div
      alt="delete"
      class="DeleteButton-sc-2zb8s8-0 ceLVod"
      data-testid="delete-1"
      role="button"
      type="button"
    />
  </div>
</div>
`;

exports[`<TodoItem /> Should render and match the snapshot when done is true 1`] = `
<div
  class="Wrapper-ziinx6-0 ecjWnr"
  id="todo-1"
>
  <input
    class="Input-tpeqbo-0 itMdwa"
    data-testid="editInput-1"
    type="text"
    value="One item"
  />
  <div
    class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
  >
    <div
      alt="uncheck"
      class="Checkbox-eu7a0t-0 hjQtxn"
      data-testid="toggle-1"
      role="button"
      type="button"
    />
    <div
      alt="delete"
      class="DeleteButton-sc-2zb8s8-0 ceLVod"
      data-testid="delete-1"
      role="button"
      type="button"
    />
  </div>
</div>
`;

exports[`<TodoItem /> Should render and match the snapshot when focused is true 1`] = `
<div
  class="Wrapper-ziinx6-0 ecjWnr"
  id="todo-1"
>
  <input
    class="Input-tpeqbo-0 itMdwa"
    data-testid="editInput-1"
    type="text"
    value="One item"
  />
  <div
    class="TodoOptions-sc-1s3b1hj-0 jWmTOe"
  >
    <div
      alt="check"
      class="Checkbox-eu7a0t-0 hjQtxn"
      data-testid="toggle-1"
      role="button"
      type="button"
    />
    <div
      alt="delete"
      class="DeleteButton-sc-2zb8s8-0 ceLVod"
      data-testid="delete-1"
      role="button"
      type="button"
    />
  </div>
</div>
`;
